# comp-app--nfw5po

./: .gitignore  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: analytics-service.yml  api-gateway.yml  event-service.yml  member-service.yml  web.yml
blitzy/documentation/: Input Prompt.md  Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/neo4j/: Dockerfile
infrastructure/docker/neo4j/config/: neo4j.conf
infrastructure/docker/redis/: Dockerfile
infrastructure/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
infrastructure/k8s/analytics-service/: deployment.yaml  service.yaml
infrastructure/k8s/api-gateway/: deployment.yaml  service.yaml
infrastructure/k8s/event-service/: deployment.yaml  service.yaml
infrastructure/k8s/member-service/: deployment.yaml  service.yaml
infrastructure/k8s/neo4j/: service.yaml  statefulset.yaml
infrastructure/k8s/redis/: service.yaml  statefulset.yaml
infrastructure/k8s/web/: deployment.yaml  service.yaml
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/scripts/: backup-neo4j.sh  deploy.sh  restore-neo4j.sh  rollback.sh  setup-monitoring.sh
infrastructure/terraform/aws/: backend.tf  outputs.tf  provider.tf  variables.tf
src/backend/: .dockerignore  .env.example  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
src/backend/analytics-service/: Dockerfile  pyproject.toml
src/backend/analytics-service/src/: __init__.py  app.py
src/backend/analytics-service/src/config/: __init__.py  settings.py
src/backend/analytics-service/src/models/: __init__.py  graph_model.py  tda_model.py
src/backend/analytics-service/src/services/: __init__.py  graph_analysis.py  network_metrics.py  tda_computation.py
src/backend/analytics-service/src/utils/: __init__.py  graph_utils.py  persistence_diagram.py
src/backend/analytics-service/tests/: __init__.py
src/backend/analytics-service/tests/integration/: __init__.py  test_analysis.py
src/backend/analytics-service/tests/unit/: __init__.py  test_tda.py
src/backend/api-gateway/: Dockerfile  package.json
src/backend/event-service/: Dockerfile  package.json
src/backend/member-service/: Dockerfile  package.json
src/backend/openapi/: analytics-service.yaml  event-service.yaml  member-service.yaml
src/test/: .env.test  README.md  cypress.config.ts  jest.config.ts  package.json  tsconfig.json
src/test/setup/: global-setup.ts  mock-services.ts  test-environment.ts
src/test/types/: cypress.d.ts  test-utils.d.ts
src/test/utils/: api-client.ts  auth-helpers.ts  graph-generators.ts  mock-data.ts  performance-metrics.ts  test-database.ts  test-helpers.ts
src/web/: .env.development  .env.example  .env.production  .eslintrc.json  .prettierrc  README.md  next.config.ts  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json
src/web/public/: manifest.json  robots.txt
(+216 files in other folders)
